line auto-indent

--- a/about.html
+++ b/about.html
@@ -3,24 +3,24 @@
 <head>
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script>
-		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
 		m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-		})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+	})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-		ga('create', 'code here', 'auto');
-		ga('send', 'pageview');
+	ga('create', 'code here', 'auto');
+	ga('send', 'pageview');
 	</script>
 
-    <title>Sonica Katoch</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Portfolio" />
-    <meta name="author" content="Sonica Katoch">
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/ico" href="pizza.png" />
-    <link href="style.css" rel="stylesheet" />
-    <link href="css/font-awesome.min.css" rel="stylesheet" />
-    <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,600,700" rel="stylesheet">
+	<title>Sonica Katoch</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<meta name="description" content="Portfolio" />
+	<meta name="author" content="Sonica Katoch">
+	<meta charset="UTF-8" />
+	<link rel="icon" type="image/ico" href="pizza.png" />
+	<link href="style.css" rel="stylesheet" />
+	<link href="css/font-awesome.min.css" rel="stylesheet" />
+	<link href="https://fonts.googleapis.com/css?family=Poppins:300,400,600,700" rel="stylesheet">
 
 </head>
 
@@ -33,222 +33,208 @@
 <body class="hidden">
 
 	<main>
-        <!-- Preloader -->
-        <div class="preloader-wrap">
-            <div class="outer">
-                <div class="inner">
-                    <div class="percentage" id="precent"></div>
-                </div>
-            </div>
-        </div>
-        <!--/Preloader -->
-
-        <div class="cd-index cd-main-content">
-
-        <!-- Page Content -->
-        <div id="page-content" class="light-content">
-
-
-            <!-- Header -->
-            <header class="classic-menu">
-                <div id="header-container">
-
-
-                <!-- Logo -->
-                <div id="logo" class="hide-ball">
-                    <a class="ajax-link" data-type="page-transition" href="index.html">
-                        <img class="black-logo" src="images/logo.png" alt="ClaPat Logo">
-                        <img class="white-logo" src="images/logo-white.png" alt="ClaPat Logo">
-                    </a>
-                </div>
-                <!--/Logo -->
-
-                <!-- Navigation -->
-								<nav>
-									<div class="nav-height">
-												<div class="outer">
-														<div class="inner">
-																<ul data-breakpoint="1025" class="flexnav">
-																		<li class="link menu-timeline active"><a class="link" href="#">Index</a>
-																			<ul>
-																				<li><a class="ajax-link" href="kendrick.html" data-type="page-transition">Kendrick</a></li>
-																				<li><a class="ajax-link" href="bite-rite.html" data-type="page-transition">Bite Rite</a></li>
-																				<li><a class="ajax-link" href="3d-exploration.html" data-type="page-transition">3D Exploration</a></li>
-																				<li><a class="ajax-link" href="rising-temp.html" data-type="page-transition">Rising Temp</a></li>
-																			</ul>
-																		</li>
-																		<li class="link menu-timeline"><a class="ajax-link link" data-type="page-transition" href="about.html">About</a></li>
-																		</li>
-																</ul>
-														</div>
-												</div>
-										</div>
-								</nav>
-                <!--/Navigation -->
-
-                <!-- Menu Burger -->
-                <div id="burger-wrapper" class="parallax-wrap">
-                    <div id="menu-burger" class="parallax-element">
-                        <span></span>
-                        <span></span>
-                    </div>
-                </div>
-                <!--/Menu Burger -->
-
-                </div>
-            </header>
-            <!--/Header -->
-
-
-            <!-- Main -->
-            <div id="main">
-
-            	<!-- Hero Section -->
-                <div id="hero" class="">
-                    <div id="hero-styles" class="parallax-onscroll">
-                        <div id="hero-caption" class="">
-                            <div class="inner">
-                                <!-- <h1 class="hero-title">Sonica <span>Katoch</span></h1>
-                                <h2 class="hero-subtitle">You should visit us. Our secretary makes a good coffee.</h2> -->
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <!--/Hero Section -->
-
-
-                <!-- Main Content -->
-                <div id="main-content">
-                	<div id="main-page-content">
-
-                    <!-- Row -->
-                    <div class="vc_row">
-                        <div class="container">
-
-														<!-- <h1 class="hero-title">Sonica <span>Katoch</span></h1> -->
-														<h1>Sonica Katoch is an Experience Designer living in Toronto.</h1>
-
-                        </div>
-                    </div>
-                    <!--/Row -->
-        						<!-- Row -->
-                    <div class="vc_row row_padding_top row_padding_bottom">
-
-                        <div class="container">
-
-                            <div class="one_half has-animation" data-delay="150">
-                            	<h7>Where the hell?</h7>
-															<br></br>
-                            	<h6>Interaction Designer</h6>
-															<h6>Toronto Fashion Exchange</h6>
-															<h6>2019-Present</h6>
-															<br></br>
-															<h6>Interaction Design Researcher</h6>
-															<h6>George Brown College</h6>
-															<h6>2017-2018</h6>
-															<br></br>
-                            </div>
-
-														<div class="one_half last has-animation" data-delay="150">
-                            	<h7>Who the hell?</h7>
-															<br></br>
-                            	<h6>Interaction Designer</h6>
-															<h6>Toronto Fashion Exchange</h6>
-															<h6>2019-Present</h6>
-															<br></br>
-															<h6>Interaction Design Researcher</h6>
-															<h6>George Brown College</h6>
-															<h6>2017-2018</h6>
-                            </div>
-
-                            <div class="one_half has-animation" data-delay="150">
-                              <h7>Schoolin'</h7>
-															<br></br>
-															<h6>Interaction Design and Development</h6>
-															<h6>George Brown College</h6>
-															<h6>2017-2019</h6>
-															<br></br>
-															<h6><h6>Honours Political Science</h6>
-															<h6>McMaster University</h6>
-															<h6>2010-2014</h6>
-
-														</div>
-
-														<!-- <div class="one_half last has-animation" data-delay="150">
-                              <p>CV</p>
-															<img class="cv-icon" src="images/cv.png" alt="Icon">
-
-														</div> -->
-                        </div>
-
-                    </div>
-                    <!--/Row -->
-
-
-                    <!-- Row -->
-                    <div class="vc_rowrow_padding_top row_padding_bottom">
-
-                        <div class="container">
-
-                            <!-- <h2 class="has-animation" data-delay="10">Whatever your needs, we're looking forward <br class="destroy"> to hearing from you</h2> -->
-
-                            <hr>
-
-                            <a href="mailto:sonicakat@gmail.com" class="clapat-button rounded outline ajax-link has-animation link" data-delay="100" data-type="page-transition"><span>Say Hi<img class="icon" src="images/waving-hand.png" alt="Icon"></span></a>
-
-
-                        </div>
-
-                    </div>
-                    <!--/Row -->
-
-
-                    </div>
-                	<!--/Main Page Content -->
-
-                </div>
-                <!--/Main Content -->
-            </div>
-            <!--/Main -->
-
-
-            <!-- Footer -->
-            <footer class="hidden">
-                <div id="footer-container">
-
-										<div class="socials-wrap">
-                        <div class="socials-icon"><i class="fa fa-share-alt" aria-hidden="true"></i></div>
-                        <div class="socials-text">Follow Me</div>
-                        <ul class="socials">
-                            <li><span class="parallax-wrap"><a class="parallax-element" href="https://www.facebook.com/clapat.ro" target="_blank">Fb</a></span></li>
-                            <li><span class="parallax-wrap"><a class="parallax-element" href="https://www.linkedin.com/in/sonicakatoch" target="_blank">in</a></span></li>
-                            <li><span class="parallax-wrap"><a class="parallax-element" href="https://www.twitter.com/clapatdesign" target="_blank">Tw</a></span></li>
-                            <li><span class="parallax-wrap"><a class="parallax-element" href="https://www.behance.net/sonicakato64a4" target="_blank">Be</a></span></li>
-                        </ul>
-                    </div>
-
-                </div>
-            </footer>
-            <!--/Footer -->
-
-        </div>
-        <!--/Page Content -->
-
+		<!-- Preloader -->
+		<div class="preloader-wrap">
+			<div class="outer">
+				<div class="inner">
+					<div class="percentage" id="precent"></div>
+				</div>
+			</div>
 		</div>
-	</main>
+		<!--/Preloader -->
+
+		<div class="cd-index cd-main-content">
+
+			<!-- Page Content -->
+			<div id="page-content" class="light-content">
 
 
-    <div class="cd-cover-layer"></div>
-    <div id="magic-cursor">
-        <div id="ball">
-        	<div id="ball-loader"></div>
-        </div>
-    </div>
-    <div id="rotate-device"></div>
+				<!-- Header -->
+				<header class="classic-menu">
+					<div id="header-container">
 
-    <script src="js/jquery.min.js"></script>
-    <script src="js/plugins.js"></script>
-    <script src="js/scripts.js"></script>
+
+						<!-- Logo -->
+						<div id="logo" class="hide-ball">
+							<a class="ajax-link" data-type="page-transition" href="index.html">
+								<img class="black-logo" src="images/logo.png" alt="ClaPat Logo">
+								<img class="white-logo" src="images/logo-white.png" alt="ClaPat Logo">
+							</a>
+						</div>
+						<!--/Logo -->
+
+						<!-- Navigation -->
+						<nav>
+							<div class="nav-height">
+								<div class="outer">
+									<div class="inner">
+										<ul data-breakpoint="1025" class="flexnav">
+											<li class="link menu-timeline active"><a class="link" href="#">Index</a>
+												<ul>
+													<li><a class="ajax-link" href="kendrick.html" data-type="page-transition">Kendrick</a></li>
+													<li><a class="ajax-link" href="bite-rite.html" data-type="page-transition">Bite Rite</a></li>
+													<li><a class="ajax-link" href="3d-exploration.html" data-type="page-transition">3D Exploration</a></li>
+													<li><a class="ajax-link" href="rising-temp.html" data-type="page-transition">Rising Temp</a></li>
+												</ul>
+											</li>
+											<li class="link menu-timeline"><a class="ajax-link link" data-type="page-transition" href="about.html">About</a></li>
+										</li>
+									</ul>
+								</div>
+							</div>
+						</div>
+					</nav>
+					<!--/Navigation -->
+
+					<!-- Menu Burger -->
+					<div id="burger-wrapper" class="parallax-wrap">
+						<div id="menu-burger" class="parallax-element">
+							<span></span>
+							<span></span>
+						</div>
+					</div>
+					<!--/Menu Burger -->
+
+				</div>
+			</header>
+			<!--/Header -->
+
+
+			<!-- Main -->
+			<div id="main">
+
+				<!-- Hero Section -->
+				<div id="hero" class="">
+					<div id="hero-styles" class="parallax-onscroll">
+						<div id="hero-caption" class="">
+							<div class="inner">
+								<!-- <h1 class="hero-title">Sonica <span>Katoch</span></h1>
+								<h2 class="hero-subtitle">You should visit us. Our secretary makes a good coffee.</h2> -->
+							</div>
+						</div>
+					</div>
+				</div>
+				<!--/Hero Section -->
+
+
+				<!-- Main Content -->
+				<div id="main-content">
+					<div id="main-page-content">
+
+						<!-- Row -->
+						<div class="vc_row">
+							<div class="container">
+
+								<!-- <h1 class="hero-title">Sonica <span>Katoch</span></h1> -->
+								<h1>Sonica Katoch is an Experience Designer living in Toronto.</h1>
+
+							</div>
+						</div>
+						<!--/Row -->
+						<!-- Row -->
+						<div class="vc_row row_padding_top row_padding_bottom">
+
+							<div class="container">
+
+								<div class="one_half has-animation" data-delay="150">
+									<h5>How the hell?</h5>
+									<h7>
+										<dl>Interaction Designer<hr></hr>Toronto Fashion Exchange<hr></hr>2019-Present</dl><br></br>
+										<dl>Interaction Design Researcher<hr></hr>George Brown College<hr></hr>2017-2018</dl><br></br>
+									</h7>
+								</div>
+
+								<div class="one_half last has-animation" data-delay="150">
+									<h5>Who the hell?</h5>
+									<h7>
+										<dl>blah<hr></hr>blah<hr></hr>blah</dl><br></br>
+										<dl>blah<hr></hr>blah<hr></hr>blah</dl><br></br>
+									</h7>
+								</div>
+
+								<div class="one_half has-animation" data-delay="150">
+									<h5>Schoolin'</h5>
+									<h7>
+										<dl>Interaction Design and Development<hr></hr>George Brown College<hr></hr>2017-2019</dl><br></br>
+										<dl>Honours Political Science<hr></hr>McMaster University<hr></hr>2010-2014</dl><br></br>
+									</h7>
+								</div>
+
+								<!-- <div class="one_half last has-animation" data-delay="150">
+								<p>CV</p>
+								<img class="cv-icon" src="images/cv.png" alt="Icon">
+
+							</div> -->
+						</div>
+
+					</div>
+					<!--/Row -->
+
+
+					<!-- Row -->
+					<div class="vc_rowrow_padding_top row_padding_bottom">
+
+						<div class="container">
+
+							<!-- <h2 class="has-animation" data-delay="10">Whatever your needs, we're looking forward <br class="destroy"> to hearing from you</h2> -->
+
+							<hr>
+
+							<a href="mailto:sonicakat@gmail.com" class="clapat-button rounded outline ajax-link has-animation link" data-delay="100" data-type="page-transition"><span>Say Hi<img class="icon" src="images/waving-hand.png" alt="Icon"></span></a>
+
+
+						</div>
+
+					</div>
+					<!--/Row -->
+
+
+				</div>
+				<!--/Main Page Content -->
+
+			</div>
+			<!--/Main Content -->
+		</div>
+		<!--/Main -->
+
+
+		<!-- Footer -->
+		<footer class="hidden">
+			<div id="footer-container">
+
+				<div class="socials-wrap">
+					<div class="socials-icon"><i class="fa fa-share-alt" aria-hidden="true"></i></div>
+					<div class="socials-text">Follow Me</div>
+					<ul class="socials">
+						<li><span class="parallax-wrap"><a class="parallax-element" href="https://www.facebook.com/clapat.ro" target="_blank">Fb</a></span></li>
+						<li><span class="parallax-wrap"><a class="parallax-element" href="https://www.linkedin.com/in/sonicakatoch" target="_blank">in</a></span></li>
+						<li><span class="parallax-wrap"><a class="parallax-element" href="https://www.twitter.com/clapatdesign" target="_blank">Tw</a></span></li>
+						<li><span class="parallax-wrap"><a class="parallax-element" href="https://www.behance.net/sonicakato64a4" target="_blank">Be</a></span></li>
+					</ul>
+				</div>
+
+			</div>
+		</footer>
+		<!--/Footer -->
+
+	</div>
+	<!--/Page Content -->
+
+</div>
+</main>
+
+
+<div class="cd-cover-layer"></div>
+<div id="magic-cursor">
+	<div id="ball">
+		<div id="ball-loader"></div>
+	</div>
+</div>
+<div id="rotate-device"></div>
+
+<script src="js/jquery.min.js"></script>
+<script src="js/plugins.js"></script>
+<script src="js/scripts.js"></script>
 
 
 
