--- a/about.html
+++ b/about.html
@@ -126,13 +126,13 @@
 							<div class="container">
 
 								<!-- <h1 class="hero-title">Sonica <span>Katoch</span></h1> -->
-								<h1>Sonica Katoch is an Experience Designer living in Toronto.</h1>
+								<h1>Sonica Katoch is an Experience Designer based in Toronto.</h1>
 
 							</div>
 						</div>
 						<!--/Row -->
 						<!-- Row -->
-						<div class="vc_row row_padding_top row_padding_bottom">
+						<!-- <div class="vc_row row_padding_top row_padding_bottom">
 
 							<div class="container">
 
@@ -147,8 +147,8 @@
 								<div class="one_half last has-animation" data-delay="150">
 									<h5>Who the hell?</h5>
 									<h7>
-										<dl>blah<hr></hr>blah<hr></hr>blah</dl><br></br>
-										<dl>blah<hr></hr>blah<hr></hr>blah</dl><br></br>
+										<dl>I'm a passionate interaction designer and delve into my craft with a strong vision.<hr></hr>
+											Before realizing design was my true obsession, I was pursuing a career in law. It was</ol>
 									</h7>
 								</div>
 
@@ -158,16 +158,16 @@
 										<dl>Interaction Design and Development<hr></hr>George Brown College<hr></hr>2017-2019</dl><br></br>
 										<dl>Honours Political Science<hr></hr>McMaster University<hr></hr>2010-2014</dl><br></br>
 									</h7>
-								</div>
+								</div> -->
 
 								<!-- <div class="one_half last has-animation" data-delay="150">
 								<p>CV</p>
 								<img class="cv-icon" src="images/cv.png" alt="Icon">
 
 							</div> -->
-						</div>
+						<!-- </div>
 
-					</div>
+					</div> -->
 					<!--/Row -->
 
 
