--- a/3d-exploration.html
+++ b/3d-exploration.html
@@ -256,9 +256,9 @@
 	<div class="socials-icon"><i class="fa fa-share-alt" aria-hidden="true"></i></div>
 	<div class="socials-text">Follow Me</div>
 	<ul class="socials">
-		<li><span class="parallax-wrap"><a class="parallax-element" href="https://www.facebook.com/clapat.ro" target="_blank">Fb</a></span></li>
+		<li><span class="parallax-wrap"><a class="parallax-element" href="https://www.instagram.com/sonicakat" target="_blank">Fb</a></span></li>
 		<li><span class="parallax-wrap"><a class="parallax-element" href="https://www.linkedin.com/in/sonicakatoch" target="_blank">in</a></span></li>
-		<li><span class="parallax-wrap"><a class="parallax-element" href="https://www.twitter.com/clapatdesign" target="_blank">Tw</a></span></li>
+		<li><span class="parallax-wrap"><a class="parallax-element" href="https://twitter.com/sonicakatoch" target="_blank">Tw</a></span></li>
 		<li><span class="parallax-wrap"><a class="parallax-element" href="https://www.behance.net/sonicakato64a4" target="_blank">Be</a></span></li>
 	</ul>
 </div>
