--- a/index.html
+++ b/index.html
@@ -226,6 +226,8 @@
 			<span data-slide-count="2">02</span>
 			<span data-slide-count="3">03</span>
 			<span data-slide-count="4">04</span>
+			<span data-slide-count="3">05</span>
+			<span data-slide-count="4">06</span>
 		</div>
 
 		<div class="socials-wrap">
