--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 								<!-- Section Slide -->
 								<div class="swiper-slide active" data-number="01" data-slide="1">
 									<a class="ajax-link-project" data-type="page-transition" href="kendrick.html">
-										<div class="slide-title" data-number="01"><span>Kendrick</span></div>
+										<div class="slide-title" data-number="01"><span>KendrickWoo</span></div>
 									</a>
 									<div class="slide-caption" data-slide-caption="1">A modern identity created for Kendrick Lamar</div>
 								</div>
