--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 								<!-- Section Slide -->
 								<div class="swiper-slide active" data-number="01" data-slide="1">
 									<a class="ajax-link-project" data-type="page-transition" href="kendrick.html">
-										<div class="slide-title" data-number="01"><span>KendrickWoo</span></div>
+										<div class="slide-title" data-number="01"><span>Kendrick</span></div>
 									</a>
 									<div class="slide-caption" data-slide-caption="1">A modern identity created for Kendrick Lamar</div>
 								</div>
@@ -226,8 +226,6 @@
 			<span data-slide-count="2">02</span>
 			<span data-slide-count="3">03</span>
 			<span data-slide-count="4">04</span>
-			<span data-slide-count="3">05</span>
-			<span data-slide-count="4">06</span>
 		</div>
 
 		<div class="socials-wrap">
