--- a/about.html
+++ b/about.html
@@ -178,7 +178,7 @@
 
 							<!-- <h2 class="has-animation" data-delay="10">Whatever your needs, we're looking forward <br class="destroy"> to hearing from you</h2> -->
 
-							<a href="mailto:sonicakat@gmail.com" class="clapat-button rounded outline ajax-link has-animation link" data-delay="100" data-type="page-transition"><span>Say Hi<img class="icon" src="images/waving-hand.png" alt="Icon"></span></a>
+							<a href="mailto:sonicakat@gmail.com" class="clapat-button rounded outline has-animation link"><span>Say Hi<img class="icon" src="images/waving-hand.png" alt="Icon"></span></a>
 
 
 						</div>
