--- a/3d-exploration.html
+++ b/3d-exploration.html
@@ -225,7 +225,7 @@
 <div id="project-nav">
 	<div class="next-project-wrap">
 		<div class="next-project-image" style="background-image:url(images/rising-hero.jpg)"></div>
-		<a class="next-project-title next-ajax-link-project hide-ball " data-type="page-transition" href="project04.html">
+		<a class="next-project-title next-ajax-link-project hide-ball " data-type="page-transition" href="rising-temp.html">
 			<div class="main-title">Rising <span>Temp</span></div>
 			<div class="main-subtitle">Next Project</div>
 		</a>
