--- a/bite-rite.html
+++ b/bite-rite.html
@@ -281,7 +281,7 @@
 <div id="project-nav">
 	<div class="next-project-wrap">
 		<div class="next-project-image" style="background-image:url(images/3d-hero.jpg)"></div>
-		<a class="next-project-title next-ajax-link-project hide-ball " data-type="page-transition" href="project03.html">
+		<a class="next-project-title next-ajax-link-project hide-ball " data-type="page-transition" href="3d-exploration.html">
 			<div class="main-title">3D <span>Exploration</span></div>
 			<div class="main-subtitle">Next Project</div>
 		</a>
