--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
 	ga('send', 'pageview');
 	</script>
 
-	<title>Sonica Katoch</title>
+	<title>Sonica Katoch - UX/UI Designer Portfolio</title>
+
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<meta name="description" content="Portfolio" />
+	<meta name="description" content="Sonica 
+	Katoch is an Interaction Designer in Toronto creating" />
 	<meta name="author" content="Sonica Katoch">
 	<meta charset="UTF-8" />
 	<link rel="icon" type="image/ico" href="pizza.png" />
