--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<meta name="description" content="Sonica Katoch is an Experience Designer based in Toronto."/>
 	<meta name="author" content="Sonica Katoch">
 	<meta charset="UTF-8" />
-	<link rel="icon" type="image/ico" href="pizza.png" />
+	<link rel="icon" type="image/ico" href="wave-icon.png" />
 	<link href="style.css" rel="stylesheet" />
 	<link href="css/font-awesome.min.css" rel="stylesheet" />
 	<link href="https://fonts.googleapis.com/css?family=Poppins:300,400,600,700" rel="stylesheet">
