rising-temp.html

--- a/rising-temp.html
+++ b/rising-temp.html
@@ -161,7 +161,7 @@
 								<p>The objective of this project is to showcase the ramifications of increasing global temperatures that have been identified by the United Nation’s report released Fall of 2019. <br><br> The interaction illustrates key solutions that help decrease the Earth’s current warming pattern. The slider pushes this concept further as the user scrolls through the series to reach O°. <br><br> The intent of this user interaction is to educate users and give them access to various communities who are working towards lowering the Earth’s temperatures.</p>
 							</div>
 
-						</div>
+						<!-- </div> -->
 
 					</div>
 					<!--/Row -->
