--- a/newitem.html
+++ b/newitem.html
@@ -247,8 +247,8 @@
                 <div id="project-nav">
                   <div class="next-project-wrap">
                     <div class="next-project-image" style="background-image:url(images/04hero.jpg)"></div>
-                    <a class="next-project-title next-ajax-link-project hide-ball " data-type="page-transition" href="project04.html">
-                      <div class="main-title">Born <span>Wild</span></div>
+                    <a class="next-project-title next-ajax-link-project hide-ball " data-type="page-transition" href="kendrick.html">
+                      <div class="main-title">New <span>Item</span></div>
                       <div class="main-subtitle">Next Project</div>
                     </a>
                   </div>
