removed 3d exploration page on all Indexes

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 												<ul>
 													<li><a class="ajax-link" href="kendrick.html" data-type="page-transition">Kendrick</a></li>
 													<li><a class="ajax-link" href="bite-rite.html" data-type="page-transition">Bite Rite</a></li>
-													<li><a class="ajax-link" href="3d-exploration.html" data-type="page-transition">3D Exploration</a></li>
+													<!-- <li><a class="ajax-link" href="3d-exploration.html" data-type="page-transition">3D Exploration</a></li> -->
 													<li><a class="ajax-link" href="rising-temp.html" data-type="page-transition">Rising Temp</a></li>
 												</ul>
 											</li>
@@ -134,12 +134,12 @@
 
 
 								<!-- Section Slide -->
-								<div class="swiper-slide" data-number="03" data-slide="3">
+								<!-- <div class="swiper-slide" data-number="03" data-slide="3">
 									<a class="ajax-link-project" data-type="page-transition" href="3d-exploration.html">
 										<div class="slide-title" data-number="03"><span>3D Exploration</span></div>
 									</a>
 									<div class="slide-caption" data-slide-caption="3">Contemporary 3D renders composited using various textures, shapes & materials</div>
-								</div>
+								</div> -->
 								<!--/Section Slide -->
 
 
