--- a/bite-rite.html
+++ b/bite-rite.html
@@ -74,7 +74,7 @@
 												<ul>
 													<li><a class="ajax-link" href="kendrick.html" data-type="page-transition">Kendrick</a></li>
 													<li><a class="ajax-link" href="bite-rite.html" data-type="page-transition">Bite Rite</a></li>
-													<li><a class="ajax-link" href="3d-exploration.html" data-type="page-transition">3D Exploration</a></li>
+													<!-- <li><a class="ajax-link" href="3d-exploration.html" data-type="page-transition">3D Exploration</a></li> -->
 													<li><a class="ajax-link" href="rising-temp.html" data-type="page-transition">Rising Temp</a></li>
 												</ul>
 											</li>
