--- a/index.html
+++ b/index.html
@@ -222,11 +222,11 @@
 <footer class="fixed">
 	<div id="footer-container">
 
-		<div id="counter-wrap" data-hover="04">
+		<div id="counter-wrap" data-hover="03">
 			<span data-slide-count="1">01</span>
 			<span data-slide-count="2">02</span>
 			<span data-slide-count="3">03</span>
-			<span data-slide-count="4">04</span>
+			<!-- <span data-slide-count="4">04</span> -->
 		</div>
 
 		<div class="socials-wrap">
