--- a/patheon.html
+++ b/patheon.html
@@ -74,7 +74,7 @@
     												<ul>
     													<li><a class="ajax-link" href="kendrick.html" data-type="page-transition">Kendrick</a></li>
     													<li><a class="ajax-link" href="bite-rite.html" data-type="page-transition">Bite Rite</a></li>
-    													<li><a class="ajax-link" href="3d-exploration.html" data-type="page-transition">3D Exploration</a></li>
+    													<!-- <li><a class="ajax-link" href="3d-exploration.html" data-type="page-transition">3D Exploration</a></li> -->
     													<li><a class="ajax-link" href="rising-temp.html" data-type="page-transition">Rising Temp</a></li>
     												</ul>
     											</li>
@@ -126,7 +126,7 @@
                 </div>
                 <div id="hero-bg-wrapper">
                     <div id="hero-image-parallax">
-                        <div id="hero-bg-image" style="background-image:url(images/01hero.jpg)"></div>
+                        <div id="hero-bg-image" style="background-image:url(images/patheon-hero.jpg)"></div>
                     </div>
                 </div>
                 <!--/Hero Section -->
@@ -162,7 +162,7 @@
 
 
                         <!-- Row -->
-                        <div class="vc_row full">
+                        <!-- <div class="vc_row full">
 
                             <div class="container">
 
@@ -173,7 +173,7 @@
 
                             </div>
 
-                        </div>
+                        </div> -->
                         <!--/Row -->
 
                         <!-- Row -->
