--- a/patheon.html
+++ b/patheon.html
@@ -177,7 +177,7 @@
                         <!--/Row -->
 
                         <!-- Row -->
-                          <div class="vc_row row_padding_top row_padding_bottom">
+                          <!-- <div class="vc_row row_padding_top row_padding_bottom">
 
                               <div class="container">
 
@@ -193,14 +193,14 @@
 
                               </div>
 
-                          </div>
+                          </div> -->
                           <!--/Row -->
 
 
-													<div class="vc_row full row_padding_bottom">
+													<!-- <div class="vc_row full row_padding_bottom"> -->
 														<!-- <figcaption>2D AR Markers</figcaption> -->
 
-															<div class="container has-animation" data-delay="100">
+															<!-- <div class="container has-animation" data-delay="100">
 																	<figcaption>2D AR Markers</figcaption>
 																	<br><br>
 																	<div class="carousel">
@@ -212,7 +212,7 @@
 
 															</div>
 
-													</div>
+													</div> -->
 
                         <!-- Row -->
 
