biterite-new img

--- a/bite-rite.html
+++ b/bite-rite.html
@@ -190,134 +190,142 @@
 					</div>
 
 				</div>
+
+				<!-- Row -->
+				<!-- <div class="vc_row full">
+
+					<div class="container">
+
+						<figure class="has-animation" data-delay="50" >
+							<img src="images/projects/br02.jpg" alt="Image Title">
+						</figure>
+
+					</div>
+
+				</div> -->
+				<!--/Row -->
+
+				<!-- Row -->
+				<!-- <div class="vc_row row_padding_top">
+
+					<div class="container">
+
+						<figure class="has-animation" data-delay="10" >
+							<img src="images/projects/br03.jpg" alt="Image Title">
+							<figcaption>Typography</figcaption>
+						</figure>
+
+					</div>
+
+				</div> -->
+				<!--/Row -->
+
+				<!-- Row -->
+				<div class="vc_row row_padding_top">
+
+					<div class="container">
+
+						<figure class="has-animation" data-delay="10" >
+							<img src="images/projects/br04.jpg" alt="Image Title">
+							<figcaption>On-Boarding Screens</figcaption>
+						</figure>
+
+					</div>
+
+				</div>
+				<!--/Row -->
+
+				<!-- Row -->
+				<div class="vc_row row_padding_top row_padding_bottom">
+
+					<div class="container">
+
+						<figure class="has-animation" data-delay="10" >
+							<img src="images/projects/br05.jpg" alt="Image Title">
+							<figcaption>Navigation</figcaption>
+						</figure>
+
+					</div>
+
+				</div>
+				<!--/Row -->
+
+				<!-- Row -->
+				<div class="vc_row row_padding_top row_padding_bottom">
+
+					<div class="container">
+
+						<figure class="has-animation" data-delay="10" >
+							<img src="images/projects/br06.jpg" alt="Image Title">
+							<figcaption>Menu Interaction</figcaption>
+						</figure>
+
+					</div>
+
+				</div>
+				<!--/Row -->
+
+				<!-- Row -->
+				<div class="vc_row row_padding_top row_padding_bottom">
+
+					<div class="container">
+
+						<figure class="has-animation" data-delay="10" >
+							<img src="images/projects/br07.jpg" alt="Image Title">
+							<figcaption>Goal Tracker</figcaption>
+						</figure>
+
+					</div>
+
+				</div>
 				<!--/Row -->
 
 
 
-				<!-- Row -->
-				<!-- <div class="vc_row row_padding_top row_padding_bottom">
-
-				<div class="container has-animation" data-delay="150">
-
-				<div class=" one_third"><h3>High-</h3></div>
-
-				<div class=" two_third last">
-				<p>Bite Rite is designed to fit the health goals your body deserves.</p>
 			</div>
+			<!--/Main Page Content -->
+
+			<!-- Project Navigation -->
+			<div id="project-nav">
+				<div class="next-project-wrap">
+					<div class="next-project-image" style="background-image:url(images/3d-hero.jpg)"></div>
+					<a class="next-project-title next-ajax-link-project hide-ball " data-type="page-transition" href="3d-exploration.html">
+						<div class="main-title">Rising <span>Temp</span></div>
+						<div class="main-subtitle">Next Project</div>
+					</a>
+				</div>
+			</div>
+			<!--/Project Navigation -->
+
 
 		</div>
+		<!--/Main Content -->
+	</div>
+	<!--/Main -->
 
+
+	<!-- Footer -->
+	<footer class="hidden">
+		<div id="footer-container">
+
+			<!-- <div class="copyright-wrap">
+			<div class="copyright-icon"><i class="fa fa-copyright" aria-hidden="true"></i></div>
+			<div class="copyright-text">Copyright</div>
+			<div class="copyright">
+			<p>2018 © <a class="link" target="_blank" href="https://www.clapat.com/themes/grenada/">Grenada Theme</a>. Design by <a class="link" target="_blank" href="https://www.clapat.com/">Clapat</a>.</p>
+		</div>
 	</div> -->
-	<!--/Row -->
 
-
-
-	<!-- Row -->
-	<div class="vc_row row_padding_top">
-
-		<div class="container">
-
-			<figure class="has-animation" data-delay="10" >
-				<img src="images/projects/br02.jpg" alt="Image Title">
-				<figcaption>On-Boarding Screens</figcaption>
-			</figure>
-
-		</div>
-
+	<div class="socials-wrap">
+		<div class="socials-icon"><i class="fa fa-share-alt" aria-hidden="true"></i></div>
+		<div class="socials-text">Follow Me</div>
+		<ul class="socials">
+			<li><span class="parallax-wrap"><a class="parallax-element" href="https://www.instagram.com/sonicakat" target="_blank">Ig</a></span></li>
+			<li><span class="parallax-wrap"><a class="parallax-element" href="https://www.linkedin.com/in/sonicakatoch" target="_blank">in</a></span></li>
+			<li><span class="parallax-wrap"><a class="parallax-element" href="https://twitter.com/sonicakatoch" target="_blank">Tw</a></span></li>
+			<li><span class="parallax-wrap"><a class="parallax-element" href="https://www.behance.net/sonicakato64a4" target="_blank">Be</a></span></li>
+		</ul>
 	</div>
-	<!--/Row -->
-
-	<!-- Row -->
-	<div class="vc_row row_padding_top row_padding_bottom">
-
-		<div class="container">
-
-			<figure class="has-animation" data-delay="10" >
-				<img src="images/projects/br03.jpg" alt="Image Title">
-				<figcaption>Navigation</figcaption>
-			</figure>
-
-		</div>
-
-	</div>
-	<!--/Row -->
-
-	<!-- Row -->
-	<div class="vc_row row_padding_top row_padding_bottom">
-
-		<div class="container">
-
-			<figure class="has-animation" data-delay="10" >
-				<img src="images/projects/br04.jpg" alt="Image Title">
-				<figcaption>Menu Interaction</figcaption>
-			</figure>
-
-		</div>
-
-	</div>
-	<!--/Row -->
-
-	<!-- Row -->
-	<div class="vc_row row_padding_top row_padding_bottom">
-
-		<div class="container">
-
-			<figure class="has-animation" data-delay="10" >
-				<img src="images/projects/br05.jpg" alt="Image Title">
-				<figcaption>Goal Tracker</figcaption>
-			</figure>
-
-		</div>
-
-	</div>
-	<!--/Row -->
-
-
-
-</div>
-<!--/Main Page Content -->
-
-<!-- Project Navigation -->
-<div id="project-nav">
-	<div class="next-project-wrap">
-		<div class="next-project-image" style="background-image:url(images/3d-hero.jpg)"></div>
-		<a class="next-project-title next-ajax-link-project hide-ball " data-type="page-transition" href="3d-exploration.html">
-			<div class="main-title">Rising <span>3D</span></div>
-			<div class="main-subtitle">Next Project</div>
-		</a>
-	</div>
-</div>
-<!--/Project Navigation -->
-
-
-</div>
-<!--/Main Content -->
-</div>
-<!--/Main -->
-
-
-<!-- Footer -->
-<footer class="hidden">
-	<div id="footer-container">
-
-		<!-- <div class="copyright-wrap">
-		<div class="copyright-icon"><i class="fa fa-copyright" aria-hidden="true"></i></div>
-		<div class="copyright-text">Copyright</div>
-		<div class="copyright">
-		<p>2018 © <a class="link" target="_blank" href="https://www.clapat.com/themes/grenada/">Grenada Theme</a>. Design by <a class="link" target="_blank" href="https://www.clapat.com/">Clapat</a>.</p>
-	</div>
-</div> -->
-
-<div class="socials-wrap">
-	<div class="socials-icon"><i class="fa fa-share-alt" aria-hidden="true"></i></div>
-	<div class="socials-text">Follow Me</div>
-	<ul class="socials">
-		<li><span class="parallax-wrap"><a class="parallax-element" href="https://www.instagram.com/sonicakat" target="_blank">Ig</a></span></li>
-		<li><span class="parallax-wrap"><a class="parallax-element" href="https://www.linkedin.com/in/sonicakatoch" target="_blank">in</a></span></li>
-		<li><span class="parallax-wrap"><a class="parallax-element" href="https://twitter.com/sonicakatoch" target="_blank">Tw</a></span></li>
-		<li><span class="parallax-wrap"><a class="parallax-element" href="https://www.behance.net/sonicakato64a4" target="_blank">Be</a></span></li>
-	</ul>
-</div>
 
 </div>
 </footer>
