bite rite update

--- a/bite-rite.html
+++ b/bite-rite.html
@@ -192,7 +192,7 @@
 				</div>
 
 				<!-- Row -->
-				<!-- <div class="vc_row full">
+				<div class="vc_row full">
 
 					<div class="container">
 
@@ -202,7 +202,21 @@
 
 					</div>
 
-				</div> -->
+				</div>
+				<!--/Row -->
+
+				<!-- Row -->
+				<div class="vc_row full">
+
+					<div class="container">
+
+						<figure class="has-animation" data-delay="50" >
+							<img src="images/projects/br03.jpg" alt="Image Title">
+						</figure>
+
+					</div>
+
+				</div>
 				<!--/Row -->
 
 				<!-- Row -->
